Mon Oct 22 17:55:00 2001  Craig Rodrigues  <crodrigu@bbn.com>

	* ace/Svc_Conf_l.cpp: Remove include of stdlib.h, fix g++/Solaris build

Mon Oct 22 15:50:35 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* THANKS: Added Chris Hughes name to the Hall of Fame

Sun Oct 21 16:44:41 2001  Ossama Othman  <ossama@uci.edu>

	* tests/Proactor_Test.cpp (disable_signal):

	  Fixed warnings regarding a method that "hid" virtual function
	  with the same name, in addition to unused argument warnings.

Sun Oct 21 15:22:57 2001  Ossama Othman  <ossama@uci.edu>

	* tests/Proactor_Test.cpp:

	  Fixed warning about deprecated conversion of "const char *" to
	  "char *" exhibited by GCC 3.0.x builds.

Sun Oct 21 12:50:39 2001  Douglas C. Schmidt  <schmidt@ace.cs.wustl.edu>

	* ace/LSOCK.cpp: The ACE_LSOCK::recv_handle() was returning success
	  without setting the I/O handle.  Thanks to Rick Ohnemus
 	  <rick.ohnemus@systemware.com> for reporting this.

	* ace/config-freebsd-pthread.h: Changed
          #if (__FreeBSD_version > 430000) to
	  #if (__FreeBSD_version > 440000) to get ACE to work with FreeBSD 4.4.
	  Thanks to Gu Song <gusong_m@yahoo.com> for reporting this.

Fri Oct 19 06:44:17 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* examples/Reactor/WFMO_Reactor/test_window_messages.cpp:
	  Don't use a global Event_Handler object since this violates the
 	  design rules for the ACE_Reactor.	
  
Sun Oct 21 13:39:27 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* bin/auto_run_tests.lst: Added the Quoter example in
	  $TAO_ROOT/examples to the list of tests in the daily builds. 

Thu Oct 18 20:56:53 2001  Ossama Othman  <ossama@uci.edu>

	* tests/Proactor_Test.cpp:

	  Added no-op main() function for platforms that do not support
	  asynchronous IO.

Thu Oct 18 22:46:09 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* ace/TP_Reactor.h:
	* ace/TP_Reactor.cpp: Fixed warnings in Sun CC and TRU 64 builds. 
