@@ -2,6 +2,11 @@ Mon Oct 22 17:55:00 2001  Craig Rodrigues  <crodrigu@bbn.com>
 
 	* ace/Svc_Conf_l.cpp: Remove include of stdlib.h, fix g++/Solaris build
 
+Mon Oct 22 15:54:29 2001  Steve Huston  <shuston@riverace.com>
+
+        * ace/config-hpux-10.x-hpc++.h: Remove hard-coded setting of
+          ACE_HAS_EXCEPTIONS. It is controlled by platform_hpux_aCC.GNU.
+
 Mon Oct 22 15:50:35 2001  Balachandran Natarajan  <bala@cs.wustl.edu>
 
 	* THANKS: Added Chris Hughes name to the Hall of Fame
